--- a/btb/app/gcp/functions/buyers/package.json
+++ b/btb/app/gcp/functions/buyers/package.json
@@ -2,6 +2,8 @@
   "name": "buyers",
   "version": "1.0.0",
   "dependencies": {
+    "express": "^4.17.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.1"
   }
 }
