--- a/btb/app/gcp/functions/tickets/package.json
+++ b/btb/app/gcp/functions/tickets/package.json
@@ -5,7 +5,9 @@
     "express": "^4.17.2",
     "cors": "^2.8.5",
     "firebase-admin": "^10.0.1",
-    "firebase-functions": "^3.16.0"
+    "firebase-functions": "^3.16.0",
+    "passport":"^0.5.2",
+    "passport-google-oauth2":"^0.2.0"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
