--- a/btb/app/gcp/functions/tickets/package.json
+++ b/btb/app/gcp/functions/tickets/package.json
@@ -8,7 +8,8 @@
     "firebase-functions": "^3.16.0",
     "passport":"^0.5.2",
     "passport-google-oauth2":"^0.2.0",
-    "cookie-session":"^2.0.0"
+    "cookie-session":"^2.0.0",
+    "jsonwebtoken": "^8.2.1"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
