--- a/btb/app/gcp/functions/tickets/package.json
+++ b/btb/app/gcp/functions/tickets/package.json
@@ -9,7 +9,9 @@
     "passport":"^0.5.2",
     "passport-google-oauth2":"^0.2.0",
     "cookie-session":"^2.0.0",
-    "jsonwebtoken": "^8.2.1"
+    "jsonwebtoken": "^8.2.1",
+    "nodemailer-mailgun-transport": "2.0",
+    "nodemailer": "6.4.6"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
