--- a/btb/app/gcp/functions/tickets/package.json
+++ b/btb/app/gcp/functions/tickets/package.json
@@ -11,7 +11,8 @@
     "cookie-session":"^2.0.0",
     "jsonwebtoken": "^8.2.1",
     "nodemailer-mailgun-transport": "2.0",
-    "nodemailer": "6.4.6"
+    "nodemailer": "6.4.6",
+    "aes-js": "3.1.2"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
