--- a/btb/app/gcp/functions/tickets/package.json
+++ b/btb/app/gcp/functions/tickets/package.json
@@ -12,7 +12,8 @@
     "jsonwebtoken": "^8.2.1",
     "nodemailer-mailgun-transport": "2.0",
     "nodemailer": "6.4.6",
-    "nodemailer-smtp-transport": "2.7.4"
+    "nodemailer-smtp-transport": "2.7.4",
+    "qrcode": "1.5.0"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
