--- a/btb/app/gcp/functions/tickets/package.json
+++ b/btb/app/gcp/functions/tickets/package.json
@@ -8,12 +8,11 @@
     "firebase-functions": "^3.16.0",
     "passport":"^0.5.2",
     "passport-google-oauth2":"^0.2.0",
-    "cookie-session":"^2.0.0",
     "jsonwebtoken": "^8.2.1",
     "nodemailer-mailgun-transport": "2.0",
     "nodemailer": "6.4.6",
     "nodemailer-smtp-transport": "2.7.4",
-    "qrcode": "1.5.0"
+    "qrcode-base64":"1.0.1"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
